# capture_win

./: CMakeLists.txt  README.md  main.cpp
capture_win/: CMakeLists.txt  README.md
capture_win/src/: main.cpp
src/: httplib.h
